fix F.A.B. not aligned

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -430,9 +430,10 @@ md-content {
 }
 .jumbotron.article-jumbotron {
   //padding:40px 50px 15px 50px;
-  padding-top:0;
+  padding:0;
   background:#b3e5fc;
   position: relative;
+  
   
   .article-jumbotron-container {
     position: relative;
